# zorba-read-pdf-module

./: CMakeLists.txt
cmake_modules/: FindJNI.cmake
src/: CMakeLists.txt  options-example.xml  read-pdf-options.xsd  read-pdf.xq
src/read-pdf.xq.src/: CppOutputStreamCreator.cpp  CppOutputStreamCreator.h  InputStreamFromCppImpl.cpp  InputStreamFromCppImpl.h  OutputStreamToCpp.cpp  OutputStreamToCpp.h  read-pdf.cpp
srcJava/: CMakeLists.txt
srcJava/org/zorbaxquery/modules/readPdf/: Config.java.in  CppInputStream.java  CppOutputStreamCreator.java  GetImages.java  InputStreamFromCpp.java  OutputStreamCreator.java  OutputStreamToCpp.java  ZorbaPdfImageWriter.java  ZorbaReadPdfModule.java  ZorbaReadPdfModule.modern
test/ExpQueryResults/read-pdf/: extractText-html.xml.res  extractText-pageDelim.xml.res  extractText-simple.xml.res  extractText-text.xml.res  render-jpg.xml.res  render-png.xml.res  render-simple.xml.res
test/Queries/read-pdf/: extractText-badOpt.xq  extractText-badPdf.spec  extractText-badPdf.xq  extractText-html.xq  extractText-pageDelim.xq  extractText-simple.xq  extractText-text.xq  render-badOpt.xq  render-badPdf.xq  render-jpg.xq  render-png.xq  render-simple.xq
